   glinitnames,        glloadname,         glpushname,        gopopname,
   [not all tested] 

5. New: OpenGL extension functions

6. Change: byte code changed - reserved word limit moved from 128 to 8192.

7. New: reserved words interface, overriding, some, synchronized.  There are in Ada 2005, 2012 but are not used in SparForte.  Reserved for compatibility reasons.

8. Change: containers package was declared in parser_doubly now extracted into separate package.

9. New: vectors (singly linked list) package. new_vector, clear, to_vector, capacity, reserve_capacity, length, set_length, is_empty, append, prepend, first_index, last_index, element [not finished], first_element, last_element, delete_first, delete_last, contains, move, reverse_elements, flip [docs needed] [tests needed]

10. Change: new, faster identifier search function. [pen enums not modified for this]

11. Fix: constants with enumerated values no longer confused with the enumerated value itself.  (e.g. b : boolean := true; ? true; will show "true" not "b").

12. Split byte code compiler into a separate file, removing it from the scanner.

13. Change: pragma advise, annotate, blocked, clarify, depreciated/deprecated, dispute, propose, refactor, todo now accept static string expressions instead of a string literal. [negative tests needed]

14. New: System.Design_Phase, System.Development_Phase, System.Maintenance_Phase, System.Testing_Phase, reflecting the command line options.

15. New: policy blocks.  static if and static case allowed in policy blocks. [docs needed] [tests needed] [needs to work outside of sparforte_policy]

16. New: policy, configuration are reserved words.

17. Fix (needed): env with AdaScript parameters gives error on semi-colon at end of command.

18. New: Additional command line editing keys: PC keyboard Home (= control-a), End (= control-e), and Del (= new Control-u / ESC x).

[David B wants shared library]
