@@ -26,7 +26,7 @@ use  ada.strings.unbounded, world;
 
 -- GCC Ada 4.3.1 will throw an exception if BUSH isn't running as a CGI program
 -- (This is, of course, a mistake in the design of Gnat.CGI, not BUSH.)
-with gnat.cgi;
+--with gnat.cgi;
 
 package parser_gnat_cgi is
 
